# workspacebrain

./: .cursorrules  .gitignore  .windsurfrules  AI.md  CLAUDE.md  README.md  package-lock.json  pyproject.toml  setup.sh
.github/workflows/: bump-version.yml
.wbrain/: AI.md  CLAUDE.md  CURSOR_RULES.md
docs/: PHASE1_SMOKE_TEST.md
scripts/: bump_version.py
src/workspacebrain/: __init__.py  cli.py  models.py
src/workspacebrain/core/: __init__.py  ai_logger.py  context_generator.py  doctor.py  installer.py  linker.py  log_parser.py  relationship_manager.py  risk_scorer.py  scanner.py  security_analyzer.py  security_context_generator.py
src/workspacebrain/templates/: __init__.py  content.py
tests/: __init__.py  conftest.py  test_ai_logger.py  test_cli.py  test_context_generator.py  test_doctor.py  test_installer.py  test_integration_phase1.py  test_linker.py  test_log_parser.py  test_risk_scorer.py  test_scanner.py  test_security_analyzer.py  test_security_context_generator.py
